crates/musli-tests/tests/ui/untagged_enum_error.stderr
error: #[musli(packed)] cannot be used to decode enums
 --> tests/ui/untagged_enum_error.rs:4:9
  |
4 | #[musli(packed)]
  |         ^^^^^^
